org.mmisw.mmiorr.client
Carlos Rueda  -  MBARI
November 2009

2009-12-28
	- The graphId can now be passed for the registrationTests, for example: -DgraphId=MyGraphID 
	  This facilitates the testing of the named graph capability that it's being enabled in the repository. 
	  For example:
	    ant -Dusername=uuu -Dpassword=xxx -DgraphId=MyGraphID registrationTests
	 
	- System property "mmiorr.host" can now be passed to specify the MMI ORR deployment to be
	  used/tested. This facilitates testing against my localhost deployment of the ORR.
	  By default, this value is "http://mmisw.org", so usual behavior hasn't been changed.
	  Under my local deployment of the ORR, I run for example:
	     ant -Dmmiorr.host=http://localhost:8080 -Dusername=carueda -Dpassword=xxx registrationTests
	
2009-11-22
	- re-organized tests mainly to separate registration tests from the retrieval/comparison tests.
	- completed CIDEVDM-30 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-30
	- completed CIDEVDM-31 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-31
	- completed CIDEVDM-32 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-32
	  Note that this test is with a fully-hosted ontology, because the URI request also
	  accepts the "_versions" parameter to obtain the available versions.
	  (The ORR could provide a more complete service including the ability to provide the
	  versions for any registered entry, perhaps even in an RDF format.)
	  Two ways to retrieve the metadata are demonstrated: directly from the model once
	  the concrete ontology is retrieved; and via a DESCRIBE query.
	  
	- completed CIDEVDM-49 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-49
	  These are some SPARQL queries. Output format "csv".

2009-11-20
	- completed CIDEVDM-42 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-42
	- jena libraries included for the comparison of models (using isIsomorphicWith)

2009-11-15